finalizando API completa em Golang - Parte 7
